--- a/leehyunsoo/exam_504.ipynb
+++ b/leehyunsoo/exam_504.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -60,14 +60,27 @@
     }
    ],
    "source": [
-    "temp = [0 for x in range(10)]\n",
-    "\n",
-    "def countNum2(temp):\n",
-    "        for i in range(1,1001):\n",
-    "            for num in (str(i)):\n",
+    "def countNum3(array):\n",
+    "        temp = [0 for x in range(10)]\n",
+    "        for ind in array:\n",
+    "            for num in str(ind):\n",
     "                temp[int(num)]+=1\n",
     "        return temp\n",
-    "print(\"0~9의 개수\",countNum2(temp))"
+    "    \n",
+    "print(\"0~9의 개수\",countNum3([x for x in range(1,1001)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert countNum3([x for x in range(10,16)]) == [1,7,1,1,1,1,0,0,0,0]\n",
+    "assert countNum3([x for x in range(1,21)]) == [2,12,3,2,2,2,2,2,2,2]\n",
+    "assert countNum3([x for x in range(0,16)]) == [2,8,2,2,2,2,1,1,1,1]\n",
+    "assert countNum3([x for x in range(10,21)]) == [2,11,2,1,1,1,1,1,1,1]\n",
+    "assert countNum3([x for x in range(1,1001)]) == [192,301,300,300,300,300,300,300,300,300]"
    ]
   },
   {
