--- a/leehyunsoo/exam_492.ipynb
+++ b/leehyunsoo/exam_492.ipynb
@@ -99,7 +99,7 @@
     "def printO2(n):    \n",
     "    return [(\"O\"*(n-row) + \"X\"*row )for row in range(1,n+1)]\n",
     "\n",
-    "print(\"\\n\".join(printO2(n)))"
+    "print(\"\\n\".join(printO2(6)))"
    ]
   },
   {
@@ -108,11 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert printO1(6) == printO2(6)\n",
-    "assert printO1(1) == printO2(1)\n",
-    "assert printO1(2) == printO2(2)\n",
-    "assert printO1(3) == printO2(3)\n",
-    "assert printO1(4) == printO2(4)"
+    "assert printO2(0) ==[]\n",
+    "assert printO2(1) ==['X']\n",
+    "assert printO2(2) ==['OX','XX']\n",
+    "assert printO2(3) ==['OOX','OXX','XXX']\n",
+    "assert printO2(6) ==['OOOOOX','OOOOXX','OOOXXX','OOXXXX','OXXXXX','XXXXXX']"
    ]
   },
   {
