--- a/leehyunsoo/exam_493.ipynb
+++ b/leehyunsoo/exam_493.ipynb
@@ -150,25 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.1 > 2.0\n"
+      "0\n",
+      "1.0 == 2.0\n"
      ]
     }
    ],
    "source": [
     "def func_493(version01,version02):\n",
     "    \n",
-    "    result = [['0' for x in range(3-len(version01.split('.'))) if len(version01.split('.'))<3 ]  + [ ind for ind in version01.split('.')]] + [['0' for x in range(3-len(version02.split('.'))) if len(version02.split('.'))<3 ]  + [ ind for ind in version02.split('.')]]\n",
+    "    result = [[0 for x in range(3-len(version01.split('.'))) if len(version01.split('.'))<3 ]  + [ int(ind) for ind in version01.split('.')]] + [[0 for x in range(3-len(version02.split('.'))) if len(version02.split('.'))<3 ]  + [ int(ind) for ind in version02.split('.')]]\n",
     "\n",
+    "    print(result[0][2])\n",
+    "    \n",
     "    if result[0][0] <= result[1][0] :\n",
     "        if result[0][1] <= result[1][1] :\n",
-    "            if result[0][2] > result[1][2] :\n",
+    "            if result[0][2] < result[1][2] :\n",
     "                return '>'\n",
     "            elif result[0][2] == result[1][2] :\n",
     "                return '=='\n",
@@ -179,14 +182,22 @@
     "    else : \n",
     "        return '>'\n",
     "    \n",
-    "print('1.1',func_493('1.1','2.0'),'2.0')"
+    "print('1.0',func_493('1.0','2.0'),'2.0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    },
     {
      "ename": "AssertionError",
      "evalue": "",
@@ -194,7 +205,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-b7b906df2cb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'=='\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'2.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'<'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'10.0.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'>'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-14-b7b906df2cb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'=='\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'2.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'<'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'10.0.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'>'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
