--- a/yoon/13_493.ipynb
+++ b/yoon/13_493.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "'1.1 < 1.2.1'"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,64 @@
     "assert fun_493('1.1' , '1.0.1')== '1.1 > 1.0.1'\n",
     "assert fun_493('1.1' , '1.2.1')== '1.1 < 1.2.1'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func_493(ver1 , ver2):\n",
+    "    array1, array2 = [int(v) for v in ver1.split('.')], [int(v) for v in ver2.split('.')]\n",
+    "    max_len = max(len(array1), len(array2))\n",
+    "    array1 += [0] * (max_len - len(array1))\n",
+    "    array2 += [0] * (max_len - len(array2))\n",
+    "    assert len(array1) == len(array2)\n",
+    "    \n",
+    "    return 1 if array1 > array2 else -1 if array1 < array2 else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_493('0.0.2' , '0.0.1') == 1\n",
+    "assert func_493('1.0.10' , '1.0.3') == 1\n",
+    "assert func_493('1.2.0' , '1.1.99') == 1\n",
+    "assert func_493('1.1' , '1.0.1') == 1\n",
+    "assert func_493('1.1' , '1.2.1') == -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_493('0.0.0','0.0.0') == 0\n",
+    "assert func_493('1.0','2.0') == -1\n",
+    "assert func_493('10.0.0','0.0.0') == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_493('0.0.0','0.0') == 0\n",
+    "assert func_493('1.0','2.0') == -1\n",
+    "assert func_493('10.0.0','0.0.0') == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
