--- a/leehyunsoo/exam_493.ipynb
+++ b/leehyunsoo/exam_493.ipynb
@@ -150,54 +150,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1.0 == 2.0\n"
+      "-1\n"
      ]
     }
    ],
    "source": [
     "def func_493(version01,version02):\n",
     "    \n",
-    "    result = [[0 for x in range(3-len(version01.split('.'))) if len(version01.split('.'))<3 ]  + [ int(ind) for ind in version01.split('.')]] + [[0 for x in range(3-len(version02.split('.'))) if len(version02.split('.'))<3 ]  + [ int(ind) for ind in version02.split('.')]]\n",
-    "\n",
-    "    print(result[0][2])\n",
+    "    ar01 = [int(ind) for ind in version01.split('.')]\n",
+    "    ar02 = [int(ind) for ind in version02.split('.')]\n",
     "    \n",
-    "    if result[0][0] <= result[1][0] :\n",
-    "        if result[0][1] <= result[1][1] :\n",
-    "            if result[0][2] < result[1][2] :\n",
-    "                return '>'\n",
-    "            elif result[0][2] == result[1][2] :\n",
-    "                return '=='\n",
-    "            else :\n",
-    "                return '<'\n",
-    "        else :\n",
-    "            return '>'\n",
-    "    else : \n",
-    "        return '>'\n",
     "    \n",
-    "print('1.0',func_493('1.0','2.0'),'2.0')"
+    "    \n",
+    "    return (1 if ar01 > ar02 else 0 if ar01 == ar02 else -1)\n",
+    "print(func_493('1.0','2.0'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n"
-     ]
-    },
     {
      "ename": "AssertionError",
      "evalue": "",
@@ -205,15 +185,16 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-b7b906df2cb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'=='\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'2.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'<'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'10.0.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'>'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-16-f0ba83aa95db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'2.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'10.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'0.0.0'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mfunc_493\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1.0'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'1'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "assert func_493('0.0.0','0.0.0') == '=='\n",
-    "assert func_493('1.0','2.0') == '<'\n",
-    "assert func_493('10.0.0','0.0.0') == '>'\n"
+    "assert func_493('0.0.0','0.0.0') == 0\n",
+    "assert func_493('1.0','2.0') == -1\n",
+    "assert func_493('10.0','0.0.0') == 1\n",
+    "assert func_493('1.0','1') == 0\n"
    ]
   },
   {
