--- a/leehyunsoo/exam_505.ipynb
+++ b/leehyunsoo/exam_505.ipynb
@@ -2,77 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func_505(num):\n",
+    "    assert num>=10\n",
+    "    \n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-a806359c3d64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_505\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mfunc_505\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_505\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m45\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "assert func_505(10) == 0\n",
+    "assert func_505(15) == 15\n",
+    "assert func_505(20) == 45"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '0', '0', '1', '1', '0']\n"
+      "3+2*1\n",
+      "['3', '2', '1'] ['+', '*']\n"
      ]
-    }
-   ],
-   "source": [
-    "temp = [x for x in range(10,16)]\n",
-    "total=[]\n",
-    "num=[100,110]\n\n",
-    "for i in range(len(num)):\n",
-    "    for y in range(len(str(num[i]))):\n",
-    "        total+=[str(num[i])[y]]\n",
-    "#     total.append(str(num[i]))\n",
-    "print(total)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025 ------ 14998500\n"
-     ]
-    }
-   ],
-   "source": [
-    "num_10 = 0\n",
-    "num_100=0\n",
-    "def ten(n):\n",
-    "    return 45*(n)\n",
-    "def hun(n):\n",
-    "    return 45*n*(n+1)\n",
-    "\n",
-    "for i in range(10):\n",
-    "    num_10 += ten(i)\n",
-    "    \n",
-    "    \n",
-    "for i in range(100):\n",
-    "    num_100 += hun(i)\n",
-    "print(num_10,\"------\",num_100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "1234"
+       "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1234"
+    "def calac_stac(array):\n",
+    "    \n",
+    "    print(array)\n",
+    "    temp = [ind  for ind in array if (ind.isdigit())] \n",
+    "    oper = [ind for ind in array if not (ind.isdigit())]\n",
+    "    result=[ind for ind in array if ind.isdigt()]\n",
+    "    print(temp,oper)\n",
+    "    return 0\n",
+    "calac_stac('3+2*1')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'calc_stac' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-a0e5d8d4e8bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mcalc_stac\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'3+2'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mcalc_stac\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'3+2+1'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mcalc_stac\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'3+2*1'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'calc_stac' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "assert calc_stac('3+2') == 3\n",
+    "assert calc_stac('3+2+1') == 6\n",
+    "assert calc_stac('3+2*1') == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
