--- a/leehyunsoo/exam_505.ipynb
+++ b/leehyunsoo/exam_505.ipynb
@@ -2,96 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def func_505(num):\n",
-    "    assert num>=10\n",
-    "    \n",
-    "    return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-a806359c3d64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_505\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mfunc_505\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mfunc_505\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m45\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "assert func_505(10) == 0\n",
-    "assert func_505(15) == 15\n",
-    "assert func_505(20) == 45"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3+2*1\n",
-      "['3', '2', '1'] ['+', '*']\n"
+      "93150\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def func_505(num):\n",
+    "    assert num>=10\n",
+    "    \n",
+    "    array = [[int(x) for x in str(ind)] for ind in range(10,num+1)]\n",
+    "    for x in range(len(array)):\n",
+    "        if len(array[x]) <len(str(num)):\n",
+    "            array[x] += [1]*(len(str(num))-len(array[x]))\n",
+    "    origin_array = np.array(array)\n",
+    "    multi_result = np.prod(origin_array,axis=1)\n",
+    "    return sum(multi_result)\n",
+    "\n",
+    "print(func_505(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_505(10) == 0\n",
+    "assert func_505(15) == 15\n",
+    "assert func_505(20) == 45\n",
+    "assert func_505(1000) == 93150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "93150"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def calac_stac(array):\n",
+    "import numpy as np\n",
+    "\n",
+    "def refac_505(num):\n",
+    "    assert num>=10\n",
     "    \n",
-    "    print(array)\n",
-    "    temp = [ind  for ind in array if (ind.isdigit())] \n",
-    "    oper = [ind for ind in array if not (ind.isdigit())]\n",
-    "    result=[ind for ind in array if ind.isdigt()]\n",
-    "    print(temp,oper)\n",
-    "    return 0\n",
-    "calac_stac('3+2*1')"
+    "    array = [[int(x) for x in str(ind)] for ind in range(10,num+1)]\n",
+    "    result = [array[x]+[1]*(len(str(num))- len(array[x])) if len(array[x]) < len(str(num)) else array[x] for x in range(len(array)) ]\n",
+    "    multi_result = np.prod(np.array(result),axis=1)\n",
+    "    return sum(multi_result)\n",
+    "\n",
+    "refac_505(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 210,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'calc_stac' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-a0e5d8d4e8bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mcalc_stac\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'3+2'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mcalc_stac\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'3+2+1'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mcalc_stac\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'3+2*1'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'calc_stac' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "assert calc_stac('3+2') == 3\n",
-    "assert calc_stac('3+2+1') == 6\n",
-    "assert calc_stac('3+2*1') == 5"
+    "assert func_505(10) == refac_505(10)\n",
+    "assert func_505(15) == refac_505(15)\n",
+    "assert func_505(20) == refac_505(20)\n",
+    "assert func_505(1000) == refac_505(1000)"
    ]
   },
   {
