--- a/leehyunsoo/exam_504.ipynb
+++ b/leehyunsoo/exam_504.ipynb
@@ -85,6 +85,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['1', '0'], ['1', '1'], ['1', '2'], ['1', '3'], ['1', '4'], ['1', '5'], ['1', '6'], ['1', '7'], ['1', '8'], ['1', '9']]\n",
+      "Counter({'1': 11, '0': 1, '2': 1, '3': 1, '4': 1, '5': 1, '6': 1, '7': 1, '8': 1, '9': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "import collections\n",
+    "def func_504(start_number, end_number):\n",
+    "    counter = collections.Counter(itertools.chain.from_iterable([[y for y in str(x)] for x in range(start_number, end_number)]))\n",
+    "    return counter\n",
+    "print([[y for y in str(x)] for x in range(10, 20)])\n",
+    "print(func_504(10, 20))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
