3월 15일 피드백

--- a/leehyunsoo/exam_529.ipynb
+++ b/leehyunsoo/exam_529.ipynb
@@ -72,10 +72,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def func_529(digit_str):\n",
+    "    prev_n = None\n",
+    "    result = []\n",
+    "    for (i, c) in enumerate(digit_str):\n",
+    "        n = int(c)\n",
+    "        if prev_n is not None:\n",
+    "            if prev_n % 2 == 0 and n % 2 == 0:\n",
+    "                result.append('*')\n",
+    "            elif prev_n % 2 == 1 and n % 2 == 1:\n",
+    "                result.append('-')\n",
+    "        result.append(c)\n",
+    "        prev_n = n\n",
+    "    return ''.join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_529('123456') == '123456'\n",
+    "assert func_529('000000') == '0*0*0*0*0*0'\n",
+    "assert func_529('11111') == '1-1-1-1-1'\n",
+    "assert func_529('22222') == '2*2*2*2*2'\n",
+    "assert func_529('1223344') == '12*23-34*4'\n",
+    "assert func_529('445544554455') == '4*45-54*45-54*45-5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4*45-54*45-54*45-5\n"
+     ]
+    }
+   ],
+   "source": [
+    "digit_str = '445544554455'\n",
+    "ds = [(int(c), int(digit_str[i+1]) if i < len(digit_str)-1 else None) for (i, c) in enumerate(digit_str)]\n",
+    "ds2 = [str(pair[0]) if pair[1] is None else str(pair[0])+'*' if pair[0] % 2 == 0 and pair[1] % 2 == 0 else str(pair[0])+'-' if pair[0] % 2 == 1 and pair[1] % 2 == 1 else str(pair[0]) for pair in ds]\n",
+    "print(''.join(ds2))"
+   ]
   }
  ],
  "metadata": {
