--- a/yoon/15_505.ipynb
+++ b/yoon/15_505.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from functools import reduce\n",
+    "def mult(arr):\n",
+    "    return reduce((lambda x, y: x * y), [int(x) for x in arr])\n",
+    "\n",
+    "def func_505(start_num ,end_num):\n",
+    "    return sum([mult(list(str(i))) for i in range(start_num, (end_num+1))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_505(10 , 11) == 1\n",
+    "assert func_505(10 , 15) == 15\n",
+    "assert func_505(99 , 100) == 81\n",
+    "assert func_505(999 , 1000) == 729\n",
+    "assert func_505(10 , 1000) == 93150"
+   ]
   }
  ],
  "metadata": {
