--- a/yoon/18_548.ipynb
+++ b/yoon/18_548.ipynb
@@ -19,15 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def func_548_1():\n",
+    "def func_548_1(number): #  전체 피보나치 수열 출력\n",
     "    result =[0,1]\n",
     "    temp = []\n",
     "    i = 2\n",
-    "    while result[-1]<4000000:\n",
+    "    while result[-1]<number:\n",
     "        result.append(result[i-1]+ result[i-2])\n",
     "        temp.append(result[i-1])\n",
     "        i = i+1\n",
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def func_548_2():\n",
+    "def func_548_2(): # 짝수인 피보나치 수열 출력\n",
     "    result =[0,1]\n",
     "    temp = []\n",
     "    i = 2\n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def func_548_3():\n",
+    "def func_548_3(): # 짝수의 합 피보나치 수열 출력\n",
     "    fibonacci_array =[0,1]\n",
     "    fibonacci_even_array = []\n",
     "    i = 2\n",
