--- a/yoon/18_548.ipynb
+++ b/yoon/18_548.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def func_548_2(): # 짝수인 피보나치 수열 출력\n",
+    "def func_548_2(number): # 짝수인 피보나치 수열 출력\n",
     "    result =[0,1]\n",
     "    temp = []\n",
     "    i = 2\n",
-    "    while result[-1]<4000000:\n",
+    "    while result[-1]<number:\n",
     "        result.append(result[i-1]+ result[i-2])\n",
     "        if(result[-1]%2 == 0):\n",
     "            temp.append(result[-1])\n",
@@ -54,15 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def func_548_3(): # 짝수의 합 피보나치 수열 출력\n",
+    "def func_548_3(number): # 짝수의 합 피보나치 수열 출력\n",
     "    fibonacci_array =[0,1]\n",
     "    fibonacci_even_array = []\n",
     "    i = 2\n",
-    "    while fibonacci_array[-1]<4000000:\n",
+    "    while fibonacci_array[-1]<number:\n",
     "        fibonacci_array.append(fibonacci_array[i-1]+ fibonacci_array[i-2])\n",
     "        if(fibonacci_array[-1]%2 == 0):\n",
     "            fibonacci_even_array.append(fibonacci_array[-1])\n",
@@ -72,34 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert func_548_1() == [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229, 832040, 1346269, 2178309, 3524578]\n",
-    "assert func_548_2() == [2, 8, 34, 144, 610, 2584, 10946, 46368, 196418, 832040, 3524578]\n",
-    "assert func_548_3() == 4613732"
+    "assert func_548_1(4000000) == [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229, 832040, 1346269, 2178309, 3524578]\n",
+    "assert func_548_2(4000000) == [2, 8, 34, 144, 610, 2584, 10946, 46368, 196418, 832040, 3524578]\n",
+    "assert func_548_3(4000000) == 4613732"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4613732"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
