3월 16일 피드백

--- a/leehyunsoo/exam_539.ipynb
+++ b/leehyunsoo/exam_539.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,15 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# assert func_539(0) == '0'\n",
     "assert func_539(6) == [6]\n",
     "assert func_539(28) == [6,28]\n",
-    "assert func_539(496) == [6,28,496]"
+    "assert func_539(496) == [6,28,496]\n",
+    "assert func_539(8128) == [6, 28, 496, 8128]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
