--- a/yoon/19_553.ipynb
+++ b/yoon/19_553.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,31 +30,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func_553_1(end_number):\n",
-    "    square_plus_result = 0\n",
-    "    plus_square_result = 0\n",
-    "    result = 0\n",
     "    square_plus_result = (end_number*(end_number +1)/2)**2\n",
-    "    \n",
     "    plus_square_result = end_number*(end_number+1)*((2*end_number)+1)/6\n",
-    "\n",
     "    result = square_plus_result - plus_square_result\n",
-    "    return int(result)\n"
+    "    return int(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert func_553_1(10) == 2640\n",
     "assert func_553_1(100) == 25164150"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
