--- a/yoon/20_555.ipynb
+++ b/yoon/20_555.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,25 +43,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'FBCDbcd'"
-      ]
-     },
-     "execution_count": 250,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "assert func_555_1('abc',3) == 'def'\n",
-    "assert func_555_1('Abc',3) == 'Def'\n",
-    "assert func_555_1('XYZxyz',4) == 'BCDbcd'\n",
-    "func_555_1('BXYZxyz',4)"
+    "def func_555_2(str_array, change_num):\n",
+    "    change_str = []\n",
+    "    result = []\n",
+    "    for i in range(len(str_array)):\n",
+    "        #대문자\n",
+    "        if(ord(str_array[i]) > 64 and ord(str_array[i]) < 91 and ord(str_array[i]) + change_num < 91 and ord(str_array[i]) + change_num > 64):\n",
+    "            change_str.append(ord(str_array[i]) + change_num)\n",
+    "        #소문자\n",
+    "        elif(ord(str_array[i]) > 96 and ord(str_array[i]) < 123 and ord(str_array[i]) + change_num < 123 and ord(str_array[i]) + change_num > 96):\n",
+    "            change_str.append(ord(str_array[i]) + change_num)\n",
+    "        else:\n",
+    "            change_str.append(ord(str_array[i]) - 26 + change_num % 26)\n",
+    "        result += chr(change_str[i])\n",
+    "    return ''.join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert func_555_2('XxYyZzXx',100) == 'TtUuVvTt'\n",
+    "assert func_555_2('XxYyZzXx',36) == 'HhIiJjHh'\n",
+    "assert func_555_2('aAbBcC',0) == 'aAbBcC'\n",
+    "assert func_555_2('abc',3) == 'def'\n",
+    "assert func_555_2('Abc',3) == 'Def'\n",
+    "assert func_555_2('XYZxyz',4) == 'BCDbcd'\n",
+    "assert func_555_2('BXYZxyz',4) == 'FBCDbcd'"
    ]
   }
  ],
