--- a/leehyunsoo/exam_5_393.ipynb
+++ b/leehyunsoo/exam_5_393.ipynb
@@ -2,25 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def max_mirror_num(start_num, end_num):\n",
-    "    origin_ar = [str(x * y) for x in range(start_num, end_num) for y in range(start_num, end_num)]\n",
-    "    mirror_ar = [int(ind) for ind in origin_ar if ind == ind[::-1]]\n",
-    "    return max(mirror_ar)"
+    "def eight_count(end_num, find_num):\n",
+    "    \n",
+    "    ar = [str(x) for x in range(end_num+1)]\n",
+    "    split = [ar[x][y] for x in range(len(ar)) for y in range(len(ar[x]))]\n",
+    "    return split.count(str(find_num))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert max_mirror_num(10, 1000) == 906609\n",
-    "assert max_mirror_num(1, 10) == 9\n",
-    "assert max_mirror_num(10, 100) == 9009"
+    "assert eight_count(0,8) == 0\n",
+    "assert eight_count(10,8) == 1\n",
+    "assert eight_count(20,8) == 2\n",
+    "assert eight_count(100,1) == 21"
    ]
   },
   {
