--- a/yoon/22_562.ipynb
+++ b/yoon/22_562.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func_562(number):\n",
-    "    a_cipher = int('9'*number)\n",
+    "    palindrome = int('9'*number)\n",
     "    result = 0\n",
-    "    for x in range(a_cipher, 0 , -1):\n",
-    "        for y in range(a_cipher, 0 , -1):\n",
+    "    for x in range(palindrome, 0 , -1):\n",
+    "        for y in range(palindrome, 0 , -1):\n",
     "            if str(x*y)[:number] == str(x*y)[-1:-1+(-number):-1] and len(str(x*y)) == number*2:\n",
     "                if result < (x*y):\n",
     "                    result = x*y \n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
