--- a/yoon/23_365.ipynb
+++ b/yoon/23_365.ipynb
@@ -23,35 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "def func_365_2(number):\n",
     "    i =1 \n",
     "    not_self_num_array =[] \n",
-    "    total = 0 \n",
     "    while (eval('+'.join(str(i)))+i)<=number:\n",
     "        not_self_num_array.append(eval('+'.join(str(i)))+i)\n",
     "        i +=1\n",
     "    not_self_num_array = sum(set(not_self_num_array))\n",
-    "    total = ((number*(number+1))/2) - not_self_num_array\n",
-    "    return total"
+    "    return ((number*(number+1))/2) - not_self_num_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12502500.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert func_365_2(5000) == 1227365"
    ]
